--- a/LESS/index.less
+++ b/LESS/index.less
@@ -5,6 +5,7 @@
 /* It is important to note, you will not be writing any CSS in this file*/
 @import '../Header/Header.less';
 @import 'Article.less';
+@import 'Menu/Menu.less';
 
 html, body {
   margin: 0;
